kubeflow/examples/resources/authorizationpolicy.allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace:
spec:
  rules:
  - {}
