kubeflow/examples/resources/authorizationpolicy.allow-selector.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-selector
  namespace:
spec:
  rules:
  - {}
  selector:
    matchLabels:
      component: predictor
